[B]Version 2.0.0[/B]
- Fix channel listing error

[B]Version 2.0.0[/B]
- The streamlink module is no longer used to get the streams.
- Added channel region settings, defaults to London

[B]Version 1.2.0[/B]
- Replace xmbcswift2 with simpleplugin

[B]Version 1.1.1[/B]
- Fixed the ordering of the channels to match the website

[B]Version 1.1.0[/B]
- Updated to include the latest channels

[B]Version 1.0.1[/B]
- Actually use the new streamlink addon

[B]Version 1.0.0[/B]
- beardypig takes over development
- updated to use streamlink addon

[B]Version 0.3.2[/B]
- Fixed the previous broken release.
- Updated the addon to correctly use the livestreamer player.

[B]Version 0.3.1[/B]
- bad release

[B]Version 0.3.0[/B]
- uses the livestreamer python module to bypass the issue of
- relative urls in the HLS playlists.

[B]Version 0.2.0[/B]
- updated the plugin to support the new site, unfortunately it is
- geo-locked to the UK

[B]Version 0.1.1[/B]
- changed name so it doesn't conflict with any other plugin

[B]Version 0.1.0[/B]
- initial release
