@@ -18,12 +18,17 @@ class TVCatchupBlocked(TVCatchupError):
     pass
 
 
+class TVCatchupAgentBlocked(TVCatchupBlocked):
+    pass
+
+
 class TVCatchup(object):
     API_URL = "http://www.tvcatchup.com/api/{0}"
-    USER_AGENT = "TVCatchup/1.0 (iPhone; iOS 11.0; Scale/2.00)"
+    USER_AGENT = "TVCatchup/1.0 (iPhone; iOS 11.0.2; Scale/3.00)"
 
-    def __init__(self, region=1):
+    def __init__(self, region=1, user_agent=None):
         self.region = region
+        self.user_agent = user_agent or self.USER_AGENT
 
     @staticmethod
     def lookup_region(name):
@@ -51,7 +56,7 @@ class TVCatchup(object):
         timeout = kwargs.pop("timeout", 10.0)
 
         opener = urllib2.build_opener()
-        opener.addheaders = [("User-Agent", self.USER_AGENT),
+        opener.addheaders = [("User-Agent", self.user_agent),
                              ("region-id", str(self.region))]
 
         req = urllib2.Request(self.API_URL.format(path), **kwargs)
@@ -70,6 +75,8 @@ class TVCatchup(object):
 
     def stream(self, channel_id):
         data = self.api_call("stream/{0}".format(channel_id))
+        if data['stream'].endswith('hls/ua.m3u8'):
+            raise TVCatchupAgentBlocked("User-Agent blocked")
         if data["blocked"]:
             raise TVCatchupBlocked(data.get("blocked_message"))
         else:
